--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,9 +7,11 @@ html {
 }
 
 body {
+    color: $dark-gray;
     font-family: Helvetica, Arial, sans-serif;
     font-size: $m-size;
     background: white;
+    line-height: 1.6;
 }
 
 button {
