--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,16 @@
 // Colors
+$dark-gray: #333333;
+$gray: #666;
+$blue: #64c1f0;
+$dark-blue: #364051;
+$off-white: #f7f7f7;
+
+
+//Font Sizes
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //Spacing
-
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
