changed background color login page

--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -1,6 +1,6 @@
 .box-layout {
     align-items: center;
-    background: rgb(208, 245, 154);
+    background: $dark-blue;
     background-size: cover;
     display: flex;
     height: 100vh;
