login style change

--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -4,8 +4,9 @@
     background-size: cover;
     display: flex;
     height: 100vh;
-    justify-content: center;;
-    width: 100vw
+    justify-content: center;
+    width: 100vw;
+    padding: 15px;
 }
 
 .box-layout__box {
